<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C2E1C2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#70A37F"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:background="@color/lapis"
                app:title="BreathEx Help"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/help_reading_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_reading_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10sp"/>

            <TextView
                android:id="@+id/help_reading_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/help_reading"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/help_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_history_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10sp"/>

            <TextView
                android:id="@+id/help_history_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/help_history"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/help_water_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_water_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10sp"/>

            <TextView
                android:id="@+id/help_water_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/help_water"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>